partions in stored parquets

--- a/Data_Checks.ipynb
+++ b/Data_Checks.ipynb
@@ -21,38 +21,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting s3fs\n",
-      "  Downloading https://files.pythonhosted.org/packages/72/5c/ec84c7ec49fde2c3b0d885ecae4504fa40fc77fef7684e9f2939c50f9b94/s3fs-0.4.0-py3-none-any.whl\n",
-      "Collecting boto3>=1.9.91 (from s3fs)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/d5/57/e9675a5a8d0ee586594ff19cb9a601334fbf24fa2fb29052d2a900ee5d23/boto3-1.11.9-py2.py3-none-any.whl (128kB)\n",
-      "\u001b[K    100% |████████████████████████████████| 133kB 5.1MB/s ta 0:00:01\n",
-      "\u001b[?25hCollecting botocore>=1.12.91 (from s3fs)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/64/4c/b0b0d3b6f84a05f9135051b56d3eb8708012a289c4b82ee21c8c766f47b5/botocore-1.14.9-py2.py3-none-any.whl (5.9MB)\n",
-      "\u001b[K    100% |████████████████████████████████| 5.9MB 4.2MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting fsspec>=0.6.0 (from s3fs)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/dd/1f/7028dacd3c28f34ce48130aae73a88fa5cc27b6b0e494fcf2739f7954d9d/fsspec-0.6.2-py3-none-any.whl (62kB)\n",
-      "\u001b[K    100% |████████████████████████████████| 71kB 18.7MB/s ta 0:00:01\n",
-      "\u001b[?25hCollecting s3transfer<0.4.0,>=0.3.0 (from boto3>=1.9.91->s3fs)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/c7/48/a8252b6b3cd31774eab312b19d58a6ac55f296240c206617dcd38cd93bf8/s3transfer-0.3.2-py2.py3-none-any.whl (69kB)\n",
-      "\u001b[K    100% |████████████████████████████████| 71kB 19.4MB/s ta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: jmespath<1.0.0,>=0.7.1 in /opt/conda/lib/python3.6/site-packages (from boto3>=1.9.91->s3fs) (0.9.3)\n",
-      "Requirement already satisfied: urllib3<1.26,>=1.20 in /opt/conda/lib/python3.6/site-packages (from botocore>=1.12.91->s3fs) (1.22)\n",
-      "Requirement already satisfied: docutils<0.16,>=0.10 in /opt/conda/lib/python3.6/site-packages (from botocore>=1.12.91->s3fs) (0.14)\n",
+      "Requirement already satisfied: s3fs in /opt/conda/lib/python3.6/site-packages (0.4.0)\n",
+      "Requirement already satisfied: boto3>=1.9.91 in /opt/conda/lib/python3.6/site-packages (from s3fs) (1.11.9)\n",
+      "Requirement already satisfied: fsspec>=0.6.0 in /opt/conda/lib/python3.6/site-packages (from s3fs) (0.6.2)\n",
+      "Requirement already satisfied: botocore>=1.12.91 in /opt/conda/lib/python3.6/site-packages (from s3fs) (1.14.9)\n",
+      "Requirement already satisfied: s3transfer<0.4.0,>=0.3.0 in /opt/conda/lib/python3.6/site-packages (from boto3>=1.9.91->s3fs) (0.3.2)\n",
+      "Requirement already satisfied: jmespath<1.0.0,>=0.7.1 in /opt/conda/lib/python3.6/site-packages (from boto3>=1.9.91->s3fs) (0.9.3)\n",
       "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /opt/conda/lib/python3.6/site-packages (from botocore>=1.12.91->s3fs) (2.6.1)\n",
-      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.6/site-packages (from python-dateutil<3.0.0,>=2.1->botocore>=1.12.91->s3fs) (1.11.0)\n",
-      "\u001b[31mawscli 1.16.17 has requirement botocore==1.12.7, but you'll have botocore 1.14.9 which is incompatible.\u001b[0m\n",
-      "\u001b[31mawscli 1.16.17 has requirement s3transfer<0.2.0,>=0.1.12, but you'll have s3transfer 0.3.2 which is incompatible.\u001b[0m\n",
-      "Installing collected packages: botocore, s3transfer, boto3, fsspec, s3fs\n",
-      "  Found existing installation: botocore 1.12.7\n",
-      "    Uninstalling botocore-1.12.7:\n",
-      "      Successfully uninstalled botocore-1.12.7\n",
-      "  Found existing installation: s3transfer 0.1.13\n",
-      "    Uninstalling s3transfer-0.1.13:\n",
-      "      Successfully uninstalled s3transfer-0.1.13\n",
-      "  Found existing installation: boto3 1.9.7\n",
-      "    Uninstalling boto3-1.9.7:\n",
-      "      Successfully uninstalled boto3-1.9.7\n",
-      "Successfully installed boto3-1.11.9 botocore-1.14.9 fsspec-0.6.2 s3fs-0.4.0 s3transfer-0.3.2\n"
+      "Requirement already satisfied: docutils<0.16,>=0.10 in /opt/conda/lib/python3.6/site-packages (from botocore>=1.12.91->s3fs) (0.14)\n",
+      "Requirement already satisfied: urllib3<1.26,>=1.20 in /opt/conda/lib/python3.6/site-packages (from botocore>=1.12.91->s3fs) (1.22)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.6/site-packages (from python-dateutil<3.0.0,>=2.1->botocore>=1.12.91->s3fs) (1.11.0)\n"
      ]
     }
    ],
@@ -133,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "editable": true
    },
@@ -144,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "editable": true
    },
@@ -152,10 +130,10 @@
     {
      "data": {
       "text/plain": [
-       "201"
+       "206"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "editable": true
    },
@@ -175,12 +153,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+------------------+------------+-----------------+--------+---------+\n",
-      "|         artist_id|        name|         location|latitude|longitude|\n",
-      "+------------------+------------+-----------------+--------+---------+\n",
-      "|ARXKXQ31187FB510DF|October Tide|Stockholm, Sweden|59.33217| 18.06243|\n",
-      "|ARXM0CX1187B98FD56|Marc Anthony|     New York, NY|40.71455|-74.00712|\n",
-      "+------------------+------------+-----------------+--------+---------+\n",
+      "+------------------+---------------+--------------+--------+---------+\n",
+      "|         artist_id|           name|      location|latitude|longitude|\n",
+      "+------------------+---------------+--------------+--------+---------+\n",
+      "|ARQ6F0E1187FB45427|     Eisbrecher|              |    null|     null|\n",
+      "|ARQ6JKR1187B99CC19|Grzegorz Turnau|Crakow, Poland|50.06007| 19.93259|\n",
+      "+------------------+---------------+--------------+--------+---------+\n",
       "\n"
      ]
     }
@@ -191,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "editable": true
    },
@@ -199,10 +177,10 @@
     {
      "data": {
       "text/plain": [
-       "967"
+       "10025"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "editable": true
    },
@@ -234,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "editable": true
    },
@@ -246,11 +224,11 @@
       "+-------+----------+---------+------+-----+\n",
       "|user_id|first_name|last_name|gender|level|\n",
       "+-------+----------+---------+------+-----+\n",
-      "|     88|  Mohammad|Rodriguez|     M| paid|\n",
       "|     88|  Mohammad|Rodriguez|     M| free|\n",
-      "|     29|Jacqueline|    Lynch|     F| paid|\n",
+      "|     88|  Mohammad|Rodriguez|     M| paid|\n",
       "|     29|Jacqueline|    Lynch|     F| free|\n",
-      "|     36|   Matthew|    Jones|     M| paid|\n",
+      "|     29|Jacqueline|    Lynch|     F| paid|\n",
+      "|     36|   Matthew|    Jones|     M| free|\n",
       "+-------+----------+---------+------+-----+\n",
       "\n"
      ]
@@ -262,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "editable": true
    },
@@ -273,7 +251,7 @@
        "104"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
     "editable": true
    },
@@ -305,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {
     "editable": true
    },
@@ -333,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {
     "editable": true
    },
@@ -344,7 +322,7 @@
        "6820"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {
     "editable": true
    },
@@ -383,7 +361,8 @@
     "editable": true
    },
    "source": [
-    "## Analyse song table"
+    "## Analyse song table\n",
+    "Apparently there are records in this table"
    ]
   },
   {
@@ -399,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "editable": true
    },
@@ -411,11 +390,11 @@
       "+------------------+--------------------+------------------+----+---------+\n",
       "|           song_id|               title|         artist_id|year| duration|\n",
       "+------------------+--------------------+------------------+----+---------+\n",
+      "|SOAAAQN12AB01856D3|Campeones De La Vida|ARAMIDF1187FB3D8D4|   0|153.36444|\n",
+      "|SOAACFC12A8C140567| Supernatural Pt. II|ARNHTE41187B99289A|   0|343.09179|\n",
+      "|SOAACTC12AB0186A20|Christmas Is Comi...|ARXWFZ21187FB43A0B|2008|180.76689|\n",
       "|SOAADAD12A8C13D5B0|One Shot (Album V...|ARQTC851187B9B03AF|2005|263.99302|\n",
-      "|SOABCEU12A8C132027|          Cold Waste|ARL6NP61187B98C1FC|2007|385.43628|\n",
-      "|SOABNPC12A8C13A9CC|       Après Le Show|ARFM1EQ1187FB533ED|2005| 223.4771|\n",
-      "|SOABWAP12A8C13F82A|           Take Time|AR5LMPY1187FB573FE|1978|258.89914|\n",
-      "|SOABYIT12AB0183026|        Vilda vindar|AR98ZSW1187B98E82C|1985|266.13506|\n",
+      "|SOAADJH12AB018BD30|Black Light (Albu...|AR3FKJ61187B990357|1975|385.90649|\n",
       "+------------------+--------------------+------------------+----+---------+\n",
       "\n"
      ]
@@ -427,25 +406,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "editable": true
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'song_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-19-9c765c166412>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msong_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'song_df' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "14896"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "songdf.count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "## Analyse songplay (fact) table\n",
+    "There are records in this table. This is due to the fact that records without a song_id or an artist_is were not included here, since tbhis would not make much sense here."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "songplaydf = spark.read.parquet(\"s3a://christophndde4/songplay_table/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+--------------------+-------+-----+------------------+------------------+----------+--------------------+--------------------+\n",
+      "|songplay_id|          start_time|user_id|level|           song_id|         artist_id|session_id|            location|          user_agent|\n",
+      "+-----------+--------------------+-------+-----+------------------+------------------+----------+--------------------+--------------------+\n",
+      "|       3903|2018-11-29 20:21:...|     49| paid|SOABIXP12A8C135F75|AR15DJQ1187FB5910C|      1041|         Seattle, WA|Mozilla/5.0 (Wind...|\n",
+      "|        992|2018-11-14 06:19:...|     80| paid|SOACRBY12AB017C757|ARVGCRM11F50C496F4|       548|                    |\"Mozilla/5.0 (Mac...|\n",
+      "|       3369|2018-11-24 04:31:...|     29| paid|SOAECHX12A6D4FC3D9|ARX2DLI1187FB4DD03|       709|   Sydney, Australia|\"Mozilla/5.0 (Mac...|\n",
+      "| 8589935354|2018-11-04 09:41:...|     44| paid|SOAFQGA12A8C1367FA|AR0IVTL1187B9AD520|       196|     Los Angeles, CA|Mozilla/5.0 (Maci...|\n",
+      "|       1582|2018-11-28 21:05:...|     73| paid|SOAHVKA12A8C146C5F|ARPBMSQ1187B98AE69|       954|UK - England - So...|\"Mozilla/5.0 (Mac...|\n",
+      "+-----------+--------------------+-------+-----+------------------+------------------+----------+--------------------+--------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "songplaydf.orderBy(\"song_id\").limit(5).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "333"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "songplaydf.count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "Please see the last sectiob in the following notebook for explanations, why the songplay table is that small.\n",
+    "https://github.com/ChristophGmeiner/NDDE3_DataWarehouse_AWS/blob/master/DataChecks.ipynbdde4"
    ]
   },
   {
