--- a/etl.ipynb
+++ b/etl.ipynb
@@ -287,7 +287,7 @@
    ],
    "source": [
     "%%time\n",
-    "tdf.write.parquet(\"s3a://christophndde4/time_table/\")"
+    "tdf.write.partitionBy(\"year\", \"month\").parquet(\"s3a://christophndde4/time_table/\")"
    ]
   },
   {
@@ -470,47 +470,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "sdf.createOrReplaceTempView(\"sdftab\")\n",
-    "artistdf.createOrReplaceTempView(\"artisttab\")\n",
-    "songsdf.createOrReplaceTempView(\"songstab\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 51,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "songplay_df = spark.sql(\"\"\"\n",
-    "    SELECT \n",
-    "    s.songplay_id,\n",
-    "    s.timestamp AS start_time,\n",
-    "    s.userId as user_id,\n",
-    "    s.level,\n",
-    "    so.song_id,\n",
-    "    a.artist_id,\n",
-    "    s.sessionId AS session_id,\n",
-    "    a.location,\n",
-    "    s.userAgent AS user_agent\n",
-    "    FROM\n",
-    "    sdftab s\n",
-    "    LEFT JOIN artisttab a\n",
-    "    ON a.name = s.artist\n",
-    "    LEFT JOIN songstab so\n",
-    "    ON so.artist_id = a.artist_id\n",
-    "    AND so.title = s.song\n",
-    "    WHERE a.artist_id IS NOT NULL\n",
-    "    AND so.song_id IS NOT NULL\n",
-    "    --LIMIT 5\n",
-    "    \"\"\")"
+    "songplay_df = sdf.join(songstage_df, \n",
+    "                       (songstage_df.artist_name == sdf.artist) &\n",
+    "                       (songstage_df.title == sdf.song),\n",
+    "                       how=\"left\")\\\n",
+    "                 .select(sdf[\"songplay_id\"],\n",
+    "                         sdf[\"timestamp\"].alias(\"start_time\"),\n",
+    "                         sdf[\"userId\"].alias(\"user_id\"),\n",
+    "                         sdf[\"level\"],\n",
+    "                         songstage_df[\"song_id\"],\n",
+    "                         songstage_df[\"artist_id\"],\n",
+    "                         sdf[\"sessionId\"].alias(\"session_id\"),\n",
+    "                         songstage_df[\"artist_location\"].alias(\"location\"),\n",
+    "                         sdf[\"userAgent\"].alias(\"user_agent\"))\\\n",
+    "                 .filter(songstage_df[\"song_id\"].isNotNull())"
    ]
   },
   {
@@ -531,7 +510,7 @@
    ],
    "source": [
     "%%time\n",
-    "songplay_df.write.parquet(\"s3a://christophndde4/songplay_table/\")"
+    "songplay_df.write.partitionBy(F.year(\"start_time\"), F.month(\"start_time\").parquet(\"s3a://christophndde4/songplay_table/\")"
    ]
   },
   {
