ALL: Pre Submit

--- a/Data_Checks.ipynb
+++ b/Data_Checks.ipynb
@@ -21,16 +21,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: s3fs in /opt/conda/lib/python3.6/site-packages (0.4.0)\n",
-      "Requirement already satisfied: boto3>=1.9.91 in /opt/conda/lib/python3.6/site-packages (from s3fs) (1.11.9)\n",
-      "Requirement already satisfied: fsspec>=0.6.0 in /opt/conda/lib/python3.6/site-packages (from s3fs) (0.6.2)\n",
-      "Requirement already satisfied: botocore>=1.12.91 in /opt/conda/lib/python3.6/site-packages (from s3fs) (1.14.9)\n",
-      "Requirement already satisfied: s3transfer<0.4.0,>=0.3.0 in /opt/conda/lib/python3.6/site-packages (from boto3>=1.9.91->s3fs) (0.3.2)\n",
-      "Requirement already satisfied: jmespath<1.0.0,>=0.7.1 in /opt/conda/lib/python3.6/site-packages (from boto3>=1.9.91->s3fs) (0.9.3)\n",
+      "Collecting s3fs\n",
+      "  Downloading https://files.pythonhosted.org/packages/72/5c/ec84c7ec49fde2c3b0d885ecae4504fa40fc77fef7684e9f2939c50f9b94/s3fs-0.4.0-py3-none-any.whl\n",
+      "Collecting fsspec>=0.6.0 (from s3fs)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/dd/1f/7028dacd3c28f34ce48130aae73a88fa5cc27b6b0e494fcf2739f7954d9d/fsspec-0.6.2-py3-none-any.whl (62kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 71kB 6.2MB/s ta 0:00:011\n",
+      "\u001b[?25hCollecting boto3>=1.9.91 (from s3fs)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/d5/57/e9675a5a8d0ee586594ff19cb9a601334fbf24fa2fb29052d2a900ee5d23/boto3-1.11.9-py2.py3-none-any.whl (128kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 133kB 9.1MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting botocore>=1.12.91 (from s3fs)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/64/4c/b0b0d3b6f84a05f9135051b56d3eb8708012a289c4b82ee21c8c766f47b5/botocore-1.14.9-py2.py3-none-any.whl (5.9MB)\n",
+      "\u001b[K    100% |████████████████████████████████| 5.9MB 4.8MB/s eta 0:00:01    16% |█████▏                          | 952kB 28.1MB/s eta 0:00:01    39% |████████████▌                   | 2.3MB 27.6MB/s eta 0:00:01    62% |████████████████████            | 3.7MB 28.3MB/s eta 0:00:01    85% |███████████████████████████▌    | 5.0MB 29.1MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting s3transfer<0.4.0,>=0.3.0 (from boto3>=1.9.91->s3fs)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/c7/48/a8252b6b3cd31774eab312b19d58a6ac55f296240c206617dcd38cd93bf8/s3transfer-0.3.2-py2.py3-none-any.whl (69kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 71kB 16.7MB/s ta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: jmespath<1.0.0,>=0.7.1 in /opt/conda/lib/python3.6/site-packages (from boto3>=1.9.91->s3fs) (0.9.3)\n",
+      "Requirement already satisfied: urllib3<1.26,>=1.20 in /opt/conda/lib/python3.6/site-packages (from botocore>=1.12.91->s3fs) (1.22)\n",
       "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /opt/conda/lib/python3.6/site-packages (from botocore>=1.12.91->s3fs) (2.6.1)\n",
       "Requirement already satisfied: docutils<0.16,>=0.10 in /opt/conda/lib/python3.6/site-packages (from botocore>=1.12.91->s3fs) (0.14)\n",
-      "Requirement already satisfied: urllib3<1.26,>=1.20 in /opt/conda/lib/python3.6/site-packages (from botocore>=1.12.91->s3fs) (1.22)\n",
-      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.6/site-packages (from python-dateutil<3.0.0,>=2.1->botocore>=1.12.91->s3fs) (1.11.0)\n"
+      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.6/site-packages (from python-dateutil<3.0.0,>=2.1->botocore>=1.12.91->s3fs) (1.11.0)\n",
+      "\u001b[31mawscli 1.16.17 has requirement botocore==1.12.7, but you'll have botocore 1.14.9 which is incompatible.\u001b[0m\n",
+      "\u001b[31mawscli 1.16.17 has requirement s3transfer<0.2.0,>=0.1.12, but you'll have s3transfer 0.3.2 which is incompatible.\u001b[0m\n",
+      "Installing collected packages: fsspec, botocore, s3transfer, boto3, s3fs\n",
+      "  Found existing installation: botocore 1.12.7\n",
+      "    Uninstalling botocore-1.12.7:\n",
+      "      Successfully uninstalled botocore-1.12.7\n",
+      "  Found existing installation: s3transfer 0.1.13\n",
+      "    Uninstalling s3transfer-0.1.13:\n",
+      "      Successfully uninstalled s3transfer-0.1.13\n",
+      "  Found existing installation: boto3 1.9.7\n",
+      "    Uninstalling boto3-1.9.7:\n",
+      "      Successfully uninstalled boto3-1.9.7\n",
+      "Successfully installed boto3-1.11.9 botocore-1.14.9 fsspec-0.6.2 s3fs-0.4.0 s3transfer-0.3.2\n"
      ]
     }
    ],
@@ -106,12 +128,12 @@
    },
    "source": [
     "## Analyse artist table\n",
-    "Let's have a look at the first rows and count the records. Apparently there are 967 records on artists availabke."
+    "Let's have a look at the first rows and count the records. Apparently there are 10025 records on artists available."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "editable": true
    },
@@ -122,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "editable": true
    },
@@ -130,10 +152,10 @@
     {
      "data": {
       "text/plain": [
-       "206"
+       "129"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {
     "editable": true
    },
@@ -169,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {
     "editable": true
    },
@@ -180,7 +202,7 @@
        "10025"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "editable": true
    },
@@ -212,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "editable": true
    },
@@ -224,11 +246,11 @@
       "+-------+----------+---------+------+-----+\n",
       "|user_id|first_name|last_name|gender|level|\n",
       "+-------+----------+---------+------+-----+\n",
-      "|     88|  Mohammad|Rodriguez|     M| free|\n",
-      "|     88|  Mohammad|Rodriguez|     M| paid|\n",
-      "|     29|Jacqueline|    Lynch|     F| free|\n",
-      "|     29|Jacqueline|    Lynch|     F| paid|\n",
-      "|     36|   Matthew|    Jones|     M| free|\n",
+      "|     82|     Avery| Martinez|     F| paid|\n",
+      "|     83|   Stefany|    White|     F| free|\n",
+      "|     84|   Shakira|     Hunt|     F| free|\n",
+      "|     85|   Kinsley|    Young|     F| free|\n",
+      "|     85|   Kinsley|    Young|     F| paid|\n",
       "+-------+----------+---------+------+-----+\n",
       "\n"
      ]
@@ -240,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "editable": true
    },
@@ -251,7 +273,7 @@
        "104"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "editable": true
    },
@@ -283,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "editable": true
    },
@@ -292,15 +314,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------------------+----+---+----+-----+----+-------+\n",
-      "|          start_time|hour|day|week|month|year|weekday|\n",
-      "+--------------------+----+---+----+-----+----+-------+\n",
-      "|2018-11-05 18:36:...|  18|  5|  45|   11|2018|      2|\n",
-      "|2018-11-05 18:37:...|  18|  5|  45|   11|2018|      2|\n",
-      "|2018-11-05 18:41:...|  18|  5|  45|   11|2018|      2|\n",
-      "|2018-11-05 18:41:...|  18|  5|  45|   11|2018|      2|\n",
-      "|2018-11-05 18:44:...|  18|  5|  45|   11|2018|      2|\n",
-      "+--------------------+----+---+----+-----+----+-------+\n",
+      "+--------------------+----+---+----+-------+----+-----+\n",
+      "|          start_time|hour|day|week|weekday|year|month|\n",
+      "+--------------------+----+---+----+-------+----+-----+\n",
+      "|2018-11-24 14:57:...|  14| 24|  47|      7|2018|   11|\n",
+      "|2018-11-24 15:00:...|  15| 24|  47|      7|2018|   11|\n",
+      "|2018-11-24 15:04:...|  15| 24|  47|      7|2018|   11|\n",
+      "|2018-11-24 15:10:...|  15| 24|  47|      7|2018|   11|\n",
+      "|2018-11-24 15:15:...|  15| 24|  47|      7|2018|   11|\n",
+      "+--------------------+----+---+----+-------+----+-----+\n",
       "\n"
      ]
     }
@@ -311,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "editable": true
    },
@@ -322,7 +344,7 @@
        "6820"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
     "editable": true
    },
@@ -362,7 +384,7 @@
    },
    "source": [
     "## Analyse song table\n",
-    "Apparently there are records in this table"
+    "Apparently there are records 14896 for songs in this table."
    ]
   },
   {
@@ -433,7 +455,7 @@
    },
    "source": [
     "## Analyse songplay (fact) table\n",
-    "There are records in this table. This is due to the fact that records without a song_id or an artist_is were not included here, since tbhis would not make much sense here."
+    "There are 333 records in this table. This is due to the fact that records without a song_id or an artist_is were not included here, since tbhis would not make much sense here."
    ]
   },
   {
@@ -503,7 +525,7 @@
     "editable": true
    },
    "source": [
-    "Please see the last sectiob in the following notebook for explanations, why the songplay table is that small.\n",
+    "Please see the last section in the following notebook for explanations, why the songplay table is that small.\n",
     "https://github.com/ChristophGmeiner/NDDE3_DataWarehouse_AWS/blob/master/DataChecks.ipynbdde4"
    ]
   },
