--- a/etl.ipynb
+++ b/etl.ipynb
@@ -373,7 +373,7 @@
    ],
    "source": [
     "%%time\n",
-    "songsdf.write.parquet(\"s3a://christophndde4/song_table/\")"
+    "songs_df.write.partitionBy(\"year\", \"artist\").parquet(output_data + \"song_table.parquet/\")"
    ]
   },
   {
