ALL: final submit

--- a/etl.ipynb
+++ b/etl.ipynb
@@ -373,7 +373,7 @@
    ],
    "source": [
     "%%time\n",
-    "songs_df.write.partitionBy(\"year\", \"artist\").parquet(output_data + \"song_table.parquet/\")"
+    "songs_df.write.partitionBy(\"year\", \"artist_id\").parquet(output_data + \"song_table.parquet/\")"
    ]
   },
   {
